feat: add cv header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Hello</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>My CV</title>
 </head>
 <body>
-    <h1>Hello!</h1>
-    <h2>My name Dmitry Lysenka</h2>
-    <img src="img/WX1862QRXRU.jpg" alt="my photo" class="photo">
+    <header>
+        <div class="container">
+                <div class="header__top">
+                    <h1>Dmitry Lysenko</h1>
+                    <ul class="menu">
+                        <li class="menu__item">About myself</li>
+                        <li class="menu__item">Education</li>
+                        <li class="menu__item">Languages</li>
+                        <li class="menu__item">Code</li>
+                        <li class="menu__item">Contacts</li>
+                    </ul>
+                </div>
+        </div>
+    </header>
 </body>
 </html>
