feat: CV redesign

--- a/index.html
+++ b/index.html
@@ -13,16 +13,27 @@
     <header>
         <div class="container">
                 <div class="header__top">
-                    <h1>Dmitry Lysenko</h1>
                     <ul class="menu">
-                        <li class="menu__item">About myself</li>
+                        <li class="menu__item">About me</li>
+                        <li class="menu__item">Skills</li>
                         <li class="menu__item">Education</li>
-                        <li class="menu__item">Languages</li>
                         <li class="menu__item">Code</li>
                         <li class="menu__item">Contacts</li>
                     </ul>
                 </div>
+                <div class="devider"></div>
         </div>
     </header>
+
+    <section class="bio">
+        <div class="container">
+            <div class="bio__wrapper">
+                    <h1 class="bio__title">Dmitry Lysenko</h1>
+                    <h2 class="bio__subtitle">Beginer front-end developer 27 y.o. Gomel Belarus</h2>
+                    <h3 class="bio__lang">ru|eng</h3>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
