feat: cv rs icon correct

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="contacts__wrapper">
                 <a href="https://instagram.com/dmitlys?igshid=YTY2NzY3YTc=" target="_blank" class="contacts__link"><img src="img/ico/Inst.svg" alt="My Instagramm"></a>
                 <a href="https://github.com/DmitryLysenka" target="_blank" class="contacts__link"><img src="img/ico/Github.svg" alt="My Github"></a>
-                <a href="https://rs.school/js/" target="_blank" class="contacts__link"><img src="img/ico/RS.svg" alt="RS-School course"></a></div>
+                <a href="https://rs.school/js/" target="_blank" class="contacts__link"><img src="img/ico/RS.svg" alt="RS-School course" id="rs-link"></a></div>
         </div>
     </section>
 
